fixed nav on tablets

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -22,6 +22,7 @@
     font-size: 50px;
     padding-bottom: 80px;
     font-family:Absender;
+    user-select: none;
 
     @media(max-width: 1080px) {
       padding-left: 60px;
